--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -12,8 +12,7 @@
 </div>
 
 <div wba-dialog></div>
-<div iba-backdrop></div>
-<!-- <div upload></div> -->
+<backdrop></backdrop>
 <upload ></upload>
 <div list-modal></div>
 <div iba-menu-dropdown></div>
