--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -7,6 +7,6 @@
         <span class="home-desc">
             We noticed you don’t have any reports yet, get started with one of the options below, or go to the catalog to create a new application.
         </span>
-        <button class="button-upload" style="width: 205px;">Create a report</button>
+        <button class="button-upload" style="width: 205px; opacity: 0.5;" ng-disabled="true">Create a report</button>
     </div>
 </div>
