--- a/src/app/commonComponents/upload/upload.css
+++ b/src/app/commonComponents/upload/upload.css
@@ -33,19 +33,23 @@
 .input-border {
 	border: 0;
   border-bottom: 2px solid #979797;
+  background-color: transparent; 
+  color: #979797; 
+  font-family: 'Helvetica Neue'; 
+  font-size: 12px;
 }
 
 .backdrop-upload ::-webkit-input-placeholder { /* WebKit browsers */
-  color: #979797;
+  color: #979797; font-family: 'Helvetica Neue';  font-size: 12px;
 }
 .backdrop-upload ::-moz-placeholder { /* Mozilla Firefox 19+ */
-  color: #979797;
+  color: #979797; font-family: 'Helvetica Neue';  font-size: 12px;
 }
 .backdrop-upload :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-  color: #979797;
+  color: #979797; font-family: 'Helvetica Neue';  font-size: 12px;
 }
 .backdrop-upload :-ms-input-placeholder { /* Internet Explorer 10+ */
-  color: #979797;
+  color: #979797; font-family: 'Helvetica Neue';  font-size: 12px;
 }
 
 ::-webkit-file-upload-button {
