add headBar tab switch

--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -2,7 +2,7 @@
   <div head-bar></div>
   <!-- Add error message bar here -->
   
-  <div class="content-browser {{isMenuOpen ? 'layout-menu-open1' : 'layout-menu-closed'}}">
+  <div class="content-body {{isMenuOpen ? 'layout-menu-open1' : 'layout-menu-closed'}}">
   	<div message-bar></div>
   	<div class="content-page">
   		<div mask></div>
