--- a/src/app/directives/headBar/headBar.css
+++ b/src/app/directives/headBar/headBar.css
@@ -1,4 +1,3 @@
-
 /* Andy 2018-3-5 16:44  */
 .header-container {
   position: fixed;
@@ -33,34 +32,12 @@
   padding: 8px 0px 12px 15px;
   font-family: HelvNeue Roman for IBM;
   font-size: 16px;
+  width: 100px;
+  display: inline-block;
+}
+
+.tab-actived {
   border-bottom: 4px solid #41D6C3;
-  width: 92px;
 }
 
-
-
-
-
-
-
-.menu-icon {
-  /* flex: 0.055; */
-  align-items: center;
-  justify-content: space-between;
-}
-
-/* Andy 2017-8-22 17:29  */
-.search-wrapper {
-	border-bottom: 1px solid #D8D8D8;
-	flex: 0.699;
-  display: flex;
-  justify-content: center;
-}
-
-.search-input {
-	background: transparent;
-	border: 0;
-	flex: 0.60;
-	font-size: 24px;
-}
 
