--- a/src/app/components/select-files/select-files.html
+++ b/src/app/components/select-files/select-files.html
@@ -6,7 +6,7 @@
             <button class="button-upload" ng-click="$ctrl.showUpload()" >Upload</button>
         </div>
         <div class="table" style="margin: 25px 0px 58px 0px;">
-            <div class="flex-row table-head" style="border-bottom: 1px solid #1D3649;">
+            <div class="flex-row table-head" >
                 <div style="width:5%; text-align: center;"></div>
                 <div style="width:17%;">NAME</div>
                 <div style="width:12%;">RELEASE</div>
