--- a/src/app/commonComponents/table/table.html
+++ b/src/app/commonComponents/table/table.html
@@ -1,17 +1,20 @@
 <h2>{{$ctrl.title}}</h2>
 <table class="table">
-    <thead>
+    <thead class="table-head">
         <tr >
             <td ng-if="$ctrl.isShowCheckbox"><input type="checkbox" ng-model="$ctrl.isAll" ng-click="$ctrl.setAll()"/></td>
-            <td ng-repeat="head in $ctrl.tHead track by $index" ng-if="!first">{{head}}</td>
-            <td>操作</td>
+            <td ng-repeat="columnMap in $ctrl.tableColumns track by $index" ng-if="!first">{{columnMap[0]}}</td>
+            <td ng-if="$ctrl.btns">operation</td>
         </tr>
     </thead>
-    <tr ng-repeat="list in $ctrl.data track by $index">
-        <td ng-if="$ctrl.isShowCheckbox"><input type="checkbox" ng-checked="list.isSelected"/></td>
-        <td ng-repeat="item in list.list track by $index">{{::item}}</td>
-        <td>
-            <button class="{{btn.class}}" ng-repeat="btn in $ctrl.btns track by $index" ng-click="btn.event(list)">{{btn.name}}</button>
-        </td>
-    </tr>
+    <tbody>
+        <tr ng-repeat="entity in $ctrl.data track by $index">
+            <td ng-if="$ctrl.isShowCheckbox"><input type="checkbox" ng-checked="entity.isSelected"/></td>
+            <!-- <td ng-repeat="item in entity.list track by $index">{{::item}}</td> -->
+            <td ng-repeat="columnMap in $ctrl.tableColumns track by $index">{{::entity[columnMap[1]]}}</td>
+            <td ng-if="$ctrl.btns">
+                <button class="{{btn.class}}" ng-repeat="btn in $ctrl.btns track by $index" ng-click="btn.event(entity)">{{btn.name}}</button>
+            </td>
+        </tr>
+    </tbody>
 </table>
