--- a/src/style/common.css
+++ b/src/style/common.css
@@ -66,4 +66,24 @@ ol, ul {
 .filter-gc {
 	filter: grayscale(100%);
 	cursor: auto !important;
-  }
+}
+
+/* 2018.4.27 15:21 my custom table */
+.table {
+	border: 1px solid #DFE3E6;
+	background-color: #FFFFFF;
+}
+.table-head {
+	border-bottom: 1px solid #1D3649;
+	font-family: HelvNeue Bold for IBM;
+	font-size: 12px;
+	color: #1D3649;
+}
+.table .flex-row:nth-child(even), .table > tbody > tr:nth-child(odd) {
+  	background-color: #F0F3F6;
+}
+.flex-row {
+	display: flex;
+	align-items: center;
+  	height: 45px;
+}
