--- a/src/app/components/report/report.css
+++ b/src/app/components/report/report.css
@@ -5,6 +5,7 @@
   margin-bottom: 30px;
   font-family: HelvNeue Light for IBM; 
   box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.1);
+  cursor: pointer;
 }
 
 .report-container .item-top {
