Optimize and comment out redundant code.

--- a/src/app/commonComponents/upload/upload.html
+++ b/src/app/commonComponents/upload/upload.html
@@ -1,5 +1,5 @@
 <div class="backdrop df-center-single" ng-show="$ctrl.isShown">
-    <div class="backdrop-upload" style="">
+    <div class="backdrop-upload" >
         <div class="backdrop-upload-body">
             <img src="/images/close.svg" class="backdrop-close cp" data-ng-click="$ctrl.onCloseDropdown()">
             <div style="font-family: HelvNeue Light for IBM;font-size: 26px;">Upload MEPL Files</div>
