--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,7 +1,7 @@
 /* styles in src/style directory are applied to the whole page */
-body {
-  /* background: #0147A7;
-  color: #fff; */
+/* body {
+  background: #0147A7;
+  color: #fff;
 }
 
 a {
@@ -9,14 +9,14 @@ a {
 }
 
 main {
-  /* padding: 1em;
+  padding: 1em;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   margin-top: 50px;
-  display: block; */
+  display: block;
 }
 
 footer {
   text-align: center;
   font-size: 0.8em;
-}
+} */
