add sref bewteen UI pages and fresh parent route routerType

--- a/src/app/components/report-detail/report-detail.html
+++ b/src/app/components/report-detail/report-detail.html
@@ -1,6 +1,6 @@
 <div class="report-detail-container">
     <div class="page-title" style="position: relative; left: -80px;">
-        <img src="/images/back.png" class="cp" style="margin-right: 10px;" ng-click='$ctrl.save()'> Subsystem A
+        <img src="/images/back.png" class="cp" style="margin-right: 10px;" ui-sref="main.report"> Subsystem A
     </div>
 
     <div class="" style="display: flex; flex-direction: column;">
