--- a/src/app/commonComponents/upload/upload.css
+++ b/src/app/commonComponents/upload/upload.css
@@ -1,34 +1,3 @@
-.backdrop-upload {
-  /* text-align: center; */
-  border-top: 5px solid #A8216E;
-  width: 500px;
-  height: 335px;
-}
-
-.backdrop-upload-body {
-	background: #FFFFFF;
-  position: relative;
-  padding: 63px 30px 0px 48px;
-  height: 255px;
-  display: flex;
-  flex-direction: column;
-}
-
-.backdrop-upload .backdrop-close {
-	position: absolute; 
-	top: 20px; 
-	right: 20px; 
-	width: 10px;
-}
-
-.backdrop-upload-footer {
-	display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  background: #F0F3F6;
-  height: 88px;
-  padding-right: 30px;
-}
 
 .input-border {
 	border: 0;
@@ -39,16 +8,16 @@
   font-size: 12px;
 }
 
-.backdrop-upload ::-webkit-input-placeholder { /* WebKit browsers */
+.dialog-container ::-webkit-input-placeholder { /* WebKit browsers */
   color: #979797; font-family: 'Helvetica Neue';  font-size: 12px;
 }
-.backdrop-upload ::-moz-placeholder { /* Mozilla Firefox 19+ */
+.dialog-container ::-moz-placeholder { /* Mozilla Firefox 19+ */
   color: #979797; font-family: 'Helvetica Neue';  font-size: 12px;
 }
-.backdrop-upload :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+.dialog-container :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color: #979797; font-family: 'Helvetica Neue';  font-size: 12px;
 }
-.backdrop-upload :-ms-input-placeholder { /* Internet Explorer 10+ */
+.dialog-container :-ms-input-placeholder { /* Internet Explorer 10+ */
   color: #979797; font-family: 'Helvetica Neue';  font-size: 12px;
 }
 
