--- a/src/app/commonComponents/upload/upload.html
+++ b/src/app/commonComponents/upload/upload.html
@@ -1,8 +1,8 @@
 <div class="backdrop df-center-single" ng-show="$ctrl.isShown">
-    <div class="backdrop-upload" >
-        <div class="backdrop-upload-body">
-            <img src="/images/close.svg" class="backdrop-close cp" data-ng-click="$ctrl.onCloseDropdown()">
-            <div style="font-family: HelvNeue Light for IBM;font-size: 26px;">Upload MEPL Files</div>
+    <div class="dialog-container" >
+        <div class="dialog-body">
+            <img src="/images/close.svg" class="backdrop-close cp" data-ng-click="$ctrl.onCancel()">
+            <div class="dialog-title">Upload MEPL Files</div>
             <div class="df" style="flex:1;">
                 <input type="text" placeholder="File upload" ng-model1="$ctrl.meplFilesNames" disabled id="output"  value="{{ $ctrl.meplFiles.length > 1 ? $ctrl.meplFiles.length + ' Files Selected' : $ctrl.meplFilesNames}}"
                        class="input-border" style="margin-right: 30px; flex: auto; "/>
@@ -24,8 +24,8 @@
             </div>                       
         </div>
 
-        <div class="backdrop-upload-footer">
-            <button class="button-upload" style="width: 81px;background: transparent;border:none;margin-right: 15px;" ng-click="$ctrl.onCloseDropdown()">Cancel</button>
+        <div class="dialog-footer">
+            <button class="button-upload" style="width: 81px;background: transparent;border:none;margin-right: 15px;" ng-click="$ctrl.onCancel()">Cancel</button>
             <button class="button-upload" style="width: 81px;background: transparent;" ng-click="$ctrl.upload()">Done</button>
         </div>
     </div>
