--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -1,4 +1,4 @@
-<div class="wrapper" ng-class="{'form-success':ctrl.showlogin}">
+<div class="login-container" ng-class="{'form-success':ctrl.showlogin}">
     <div class="container">
         <h1>Welcome</h1>
 
