--- a/src/app/components/login/login.less
+++ b/src/app/components/login/login.less
@@ -43,7 +43,7 @@ body :-ms-input-placeholder {
   font-weight: 300;
 }
 
-.wrapper {
+.login-container {
   background: #50a3a2;
   background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
   background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
@@ -54,12 +54,12 @@ body :-ms-input-placeholder {
   overflow: hidden;
 }
 
-.wrapper.form-success .container h1 {
+.login-container.form-success .container h1 {
   -webkit-transform: translateY(85px);
   transform: translateY(85px);
 }
 
-.container {
+.login-container .container {
   max-width: 600px;
   margin: 0 auto;
   padding: 80px 0;
@@ -67,7 +67,7 @@ body :-ms-input-placeholder {
   text-align: center;
 }
 
-.container h1 {
+.login-container .container h1 {
   color: #fff;
   font-size: 40px;
   -webkit-transition-duration: 1s;
@@ -77,13 +77,13 @@ body :-ms-input-placeholder {
   font-weight: 200;
 }
 
-form {
+.login-container form {
   padding: 20px 0;
   position: relative;
   z-index: 2;
 }
 
-form input {
+.login-container form input {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -103,17 +103,17 @@ form input {
   font-weight: 300;
 }
 
-form input:hover {
+.login-container form input:hover {
   background-color: rgba(255, 255, 255, 0.4);
 }
 
-form input:focus {
+.login-container form input:focus {
   background-color: white;
   width: 300px;
   color: #53e3a6;
 }
 
-form button {
+.login-container form button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -130,7 +130,7 @@ form button {
   transition-duration: 0.25s;
 }
 
-form button:hover {
+.login-container form button:hover {
   background-color: #f5f7f9;
 }
 
