--- a/src/style/common.css
+++ b/src/style/common.css
@@ -34,6 +34,11 @@
     justify-content: center;
     align-items: center;
 }
+.df-center-vertical {
+	display: flex;
+    align-items: center;
+}
+
 .backdrop {
     position: fixed;
 	top: 0px;
