--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -1,5 +1,5 @@
 <div ng-init="init()">
-  <div head-bar router-type="{{$ctrl.routerType}}"></div>
+  <div head-bar router-type="{{$ctrl.routerType}}" switch-tab-state="$ctrl.switchTabState"></div>
   <!-- Add error message bar here -->
   
   <div class="content-body {{isMenuOpen ? 'layout-menu-open1' : 'layout-menu-closed'}}">
