--- a/src/app/directives/headBar/headBar.html
+++ b/src/app/directives/headBar/headBar.html
@@ -4,7 +4,7 @@
     <div style="font-family: HelvNeue Roman for IBM;font-size: 14px;"><span class="user-icon"></span>User Name</div>
   </div>
   <div>
-    <div class="browser-nav {{ $ctrl.routerType == 'meplFiles' ? 'tab-actived' : ''}}">MEPL Files</div>
-    <div class="browser-nav" ng-class="{'tab-actived':$ctrl.routerType == 'report'}">Reports</div>
+    <div class="browser-nav cp {{ $ctrl.routerType == 'meplFiles' ? 'tab-actived' : ''}}" ng-click="$ctrl.switchTabState()('main.selectFiles')">MEPL Files</div>
+    <div class="browser-nav cp" ng-class="{'tab-actived':$ctrl.routerType == 'report'}" ng-click="$ctrl.switchTabState()('main.report')">Reports</div>
   </div>
 </div>
