fix pmr validate logic and add checkMeplByPmr、getMepls、uploadMeplByPmr

--- a/src/app/commonComponents/dialog/dialog.html
+++ b/src/app/commonComponents/dialog/dialog.html
@@ -1,4 +1,4 @@
-<div class="backdrop df-center-single" ng-show="$ctrl.isShown">
+<div class="backdrop df-center-single" ng-show="$ctrl.isShown" style="z-index: 301;">
     <!-- ng-style="dialogDetail" -->
     <div class="dialog-container" >
         <img src="/images/close.svg" class="backdrop-close cp" ng-click="$ctrl.onCancel()">
