--- a/src/app/commonComponents/upload/upload.html
+++ b/src/app/commonComponents/upload/upload.html
@@ -1,7 +1,7 @@
 <div class="backdrop df-center-single" ng-show="$ctrl.isShown">
     <div class="dialog-container" >
         <div class="dialog-body">
-            <img src="/images/close.svg" class="backdrop-close cp" data-ng-click="$ctrl.onCancel()">
+            <img src="/images/close.svg" class="backdrop-close cp" ng-click="$ctrl.onCancel()">
             <div class="dialog-title">Upload MEPL Files</div>
             <div class="df" style="flex:1;">
                 <input type="text" placeholder="File upload" ng-model1="$ctrl.meplFilesNames" disabled id="output"  value="{{ $ctrl.meplFiles.length > 1 ? $ctrl.meplFiles.length + ' Files Selected' : $ctrl.meplFilesNames}}"
@@ -12,7 +12,7 @@
                        class="dn" style="width:100px;" ng-change="$ctrl.doCheck()" onchange="angular.element(this).scope().$ctrl.fileToUpload(this)" ng-click="$ctrl.doCheck()">
             </div>
             
-            <input style="flex:1; border-bottom-color: #A8216E;" type="text" placeholder="Or provide a PMR Number(eg: 12345,678,789)" data-ng-model="$ctrl.pmrNumber"  
+            <input style="flex:1; border-bottom-color: #A8216E;" type="text" placeholder="Or provide a PMR Number(eg: 12345,678,789)" ng-model="$ctrl.pmrNumber"  
                    class="input-border" ng-class="{'filter-gc':$ctrl.meplFiles.length}" ng-disabled="$ctrl.meplFiles.length" ng-change="$ctrl.validate()" >
             <!--    <i ng-show="form.candidates.$error.required && !form.candidates.$error.maxSize && !form.candidates.$error.pattern">required</i>
              
