--- a/src/app/commonComponents/messagebar-alert/messagebar-alert.css
+++ b/src/app/commonComponents/messagebar-alert/messagebar-alert.css
@@ -15,8 +15,8 @@
     font-size: 14px;
     line-height: 14px;
     max-width: calc(90% - 30px);
-    background: #000000;
-   	opacity: 0.6;
+    background: #5cb85c;
+   	opacity: 0.9;
    	position: relative;
     display: inline-block;
 }
