--- a/src/app/commonComponents/messagebar-alert/messagebar-alert.html
+++ b/src/app/commonComponents/messagebar-alert/messagebar-alert.html
@@ -1,5 +1,6 @@
 <div class="messagebar-alert"  data-ng-show="info.isShow">
   <div class="messagebar-container" data-ng-class="{'warning' : info.isWarning}">
-    <img data-ng-if="info.success" src=""><span>{{info.message}}</span>
+    <img data-ng-if="info.success" src="/images/submittion-succeeded.svg">
+    <span>{{info.message}}</span>
   </div>
 </div>
