--- a/src/app/components/select-files/select-files.html
+++ b/src/app/components/select-files/select-files.html
@@ -17,16 +17,16 @@
             </div>
             <div class="flex-row table-body" data-ng-repeat="file in $ctrl.fileList">
                 <div style="width:5%; text-align: center;"> <input class="dib" type="checkBox" data-ng-model="isSkipJusitification"/> </div>
-                <div style="width:17%;"> {{ file.FILENAME.slice(file.FILENAME.lastIndexOf('.', file.FILENAME.lastIndexOf('.') - 1) + 1) }} </div>
+                <div style="width:17%;"> {{ file.FILENAME.slice(file.FILENAME.lastIndexOf('/') + 1) }} </div>
                 <div style="width:12%;"> {{ file.RELEASE }} </div>
                 <div style="width:16%;"> {{ file.CREATETIME }} </div>
                 <div style="width:18%;"> {{ file.REPORTTIME }} </div>
                 <div style="width:28%;">
-                    <input class="item-value" style="width: 96%;" data-ng-model2="profile.userName" data-ng-readonly="!$ctrl['editable'+$index]" data-ng-class="{'item-value-editable':$ctrl['editable'+$index]}" value="good">
+                    <input class="item-value" style="width: 96%;" data-ng-model="$ctrl['meplComment'+$index]" data-ng-readonly="!$ctrl['editable'+$index]" data-ng-class="{'item-value-editable':$ctrl['editable'+$index]}" ng-value="file.COMMENT">
                 </div>
                 <div style="width:4%;">
                     <img src="/images/edit.png" class="cp" style="margin-right: 15px;" data-ng-if="!$ctrl['editable'+$index]" data-ng-click='$ctrl.edit($index)'>
-                    <img src="/images/checkmark.svg" class="cp" style="margin-right: 15px; max-width: 16px;" data-ng-if="$ctrl['editable'+$index]" data-ng-click='$ctrl.save($index)'>
+                    <img src="/images/checkmark.svg" class="cp" style="margin-right: 15px; max-width: 16px;" data-ng-if="$ctrl['editable'+$index]" data-ng-click='$ctrl.save($index,file.MEPLID)'>
                     <img src="/images/delete.png" class="cp" data-ng-click='$ctrl.delete(file)'>
                 </div>
             </div>
