--- a/src/app/commonComponents/upload/upload.css
+++ b/src/app/commonComponents/upload/upload.css
@@ -3,7 +3,7 @@
 	border: 0;
   border-bottom: 2px solid #979797;
   background-color: transparent; 
-  color: #979797; 
+  /* color: #979797;  */
   font-family: 'Helvetica Neue'; 
   font-size: 12px;
 }
