--- a/src/app/components/report/report.css
+++ b/src/app/components/report/report.css
@@ -3,9 +3,15 @@
   width: calc((100% - 20px * 2)/3); 
   /* padding: 27px 20px 27px 40px;  */
   margin-bottom: 30px;
+  margin-right: 20px;
   font-family: HelvNeue Light for IBM; 
   box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.1);
   cursor: pointer;
+}
+
+/* Andy 2018.7.16 18:33 */
+.report-container div > .item:last-child {
+	margin-right:0px;
 }
 
 .report-container .item-top {
