--- a/src/app/components/report/report.html
+++ b/src/app/components/report/report.html
@@ -3,36 +3,36 @@
         <div class="page-title">Health Check Reports</div>
         <button class="button-upload" ui-sref="main.selectFiles">Create</button>
     </div>
-    <div style="display: flex; justify-content: space-between;" ng-repeat="row in $ctrl.reportList">
+    <div style="display: flex;" ng-repeat="row in $ctrl.reportList">
         <div class="item" ng-repeat="report in row" ui-sref='main.reportDetail({orderId: "{{item.orderNumber}}"})'>
             <div><img src="/images/card-label-A10.svg" style="position: absolute;"></div>
             <div class="item-top" >
                 <div>
-                    <span style="font-size: 16px;">SubsystemA</span>  <br>
-                    <span style="font-size: 12px; color: #777677;"><span style="color: #4178BE">NEW</span> - Updated: Jan 01, 2017 </span>
+                    <span style="font-size: 16px;">{{ report.name }}</span>  <br>
+                    <span style="font-size: 12px; color: #777677;"><span style="color: #4178BE">{{ report.reportStatus }}</span> - Updated: Jan 01, 2017 </span>
                 </div>
-                <span style="font-family: Lubalin Book for IBM; font-size: 40px; color: #8CD211;">90</span>
+                <span style="font-family: Lubalin Book for IBM; font-size: 40px; color: #8CD211;">{{ report.score }}</span>
             </div>
             <div class="item-bottom df">
                 <div class="item-bottom-part">
-                    <div class="item-part-number">
-                        3
-                    </div>
+                    <div class="item-part-number">{{ report.missingHipers }}</div>
                     <div>Missing HIPERs</div>
                 </div>
                 <div class="item-bottom-part">
-                    <div class="item-part-number">
-                        6
-                    </div>
+                    <div class="item-part-number">{{ report.PEs }}</div>
                     <div>PEs</div>
                 </div>
                 <div class="item-bottom-part">
-                    <div class="item-part-number">
-                        6
-                    </div>
+                    <div class="item-part-number">{{ report.inconsistencies }}</div>
                     <div>Inconsistencies</div>
                 </div>
             </div>
         </div>
+    </div>
+    <div style="font-family: HelvNeue Roman for IBM; font-size: 20px; color: #1D3649; text-align: center; margin-top: 154px;" data-ng-if="!$ctrl.reportList || $ctrl.reportList.length==0">
+        <p>
+            No Reports Now.  <br>
+            Go Create One!
+        </p>
     </div>
 </div>
