--- a/src/app/components/select-files/select-files.html
+++ b/src/app/components/select-files/select-files.html
@@ -16,7 +16,9 @@
                 <div style="width:4%;" data-ng-click="sortOrder('totalCost')"></div>
             </div>
             <div class="flex-row table-body" data-ng-repeat="file in $ctrl.fileList">
-                <div style="width:5%; text-align: center;"> <input class="dib" type="checkBox" data-ng-model="isSkipJusitification"/> </div>
+                <div style="width:5%; text-align: center;"> 
+                    <input class="dib" type="checkBox" data-ng-model="$ctrl.selectedMeplFiles[$index]" ng-true-value="{{file}}" ng-false-value="false" ng-change="toggleCheckItem(item)"/> 
+                </div>
                 <div style="width:17%;"> {{ file.FILENAME.slice(file.FILENAME.lastIndexOf('/') + 1) }} </div>
                 <div style="width:12%;"> {{ file.RELEASE }} </div>
                 <div style="width:16%;"> {{ file.CREATETIME }} </div>
