--- a/src/app/components/report-detail/report-detail.html
+++ b/src/app/components/report-detail/report-detail.html
@@ -19,23 +19,25 @@
                 <div class="item-outline">
                     <div class="page-title" style="font-size: 14px;"> Missing HIPERs </div>
                     <div class="item-part-number" style="color:#A8216E">
-                        <span style="margin-right: 10px;">10</span> 
+                        <span style="margin-right: 10px;">20</span> 
                         <img src="/images/arrow-down.svg" class="cp" ng-show='!$ctrl.showHIPERs' ng-click='$ctrl.showHIPERs=true'>
                         <img src="/images/arrow-up.svg" class="cp" ng-show='$ctrl.showHIPERs' ng-click='$ctrl.showHIPERs=false'>
                     </div>
                 </div>
-                <common-table table-columns="$ctrl.tableColumns" data="$ctrl.missingHIPERs" ng-show="$ctrl.showHIPERs"></common-table>
+                <common-table table-columns="$ctrl.tableColumns" data="$ctrl.missingHIPERsPaginationItems" ng-show="$ctrl.showHIPERs"></common-table>
+                <pager total-data-num="$ctrl.missingHIPERs.length" page-size="$ctrl.pageSize" query-result="$ctrl.queryMHsResultByPagination.bind($ctrl)" ng-show="$ctrl.showHIPERs"></pager>
             </div>
             <div class="item">
                 <div class="item-outline">
                     <div class="page-title" style="font-size: 14px;"> PEs </div>
                     <div class="item-part-number" style="color:#A8216E">
-                        <span style="margin-right: 10px;">10</span> 
+                        <span style="margin-right: 10px;">13</span> 
                         <img src="/images/arrow-down.svg" class="cp" ng-show='!$ctrl.showPEs' ng-click='$ctrl.showPEs=true'>
                         <img src="/images/arrow-up.svg" class="cp" ng-show='$ctrl.showPEs' ng-click='$ctrl.showPEs=false'>
                     </div>
                 </div>
-                <common-table table-columns="$ctrl.tableColumnsOfPEs" data="$ctrl.PEs" ng-show="$ctrl.showPEs"></common-table>
+                <common-table table-columns="$ctrl.tableColumnsOfPEs" data="$ctrl.pePaginationItems" ng-show="$ctrl.showPEs"></common-table>
+                <pager total-data-num="$ctrl.PEs.length" page-size="$ctrl.pageSize" query-result="$ctrl.queryPEsResultByPagination.bind($ctrl)" ng-show="$ctrl.showPEs"></pager>
             </div>
             <div class="item">
                 <div class="item-outline">
@@ -46,7 +48,8 @@
                         <img src="/images/arrow-up.svg" class="cp" ng-show='$ctrl.showInconsistencies' ng-click='$ctrl.showInconsistencies=false'>
                     </div>
                 </div>
-                <common-table table-columns="$ctrl.tableColumnsOfInconsistencies" data="$ctrl.inconsistencies" ng-show="$ctrl.showInconsistencies"></common-table>
+                <common-table table-columns="$ctrl.tableColumnsOfInconsistencies" data="$ctrl.inconsistencyPaginationItems" ng-show="$ctrl.showInconsistencies"></common-table>
+                <pager total-data-num="$ctrl.inconsistencies.length" page-size="$ctrl.pageSize" query-result="$ctrl.queryINsResultByPagination.bind($ctrl)" ng-show="$ctrl.showInconsistencies"></pager>
             </div>
         </div>
         <div style="align-self: flex-end;" >
