--- a/src/app/components/report-detail/report-detail.html
+++ b/src/app/components/report-detail/report-detail.html
@@ -19,19 +19,19 @@
                 <div class="item-outline">
                     <div class="page-title" style="font-size: 14px;"> Missing HIPERs </div>
                     <div class="item-part-number" style="color:#A8216E">
-                        <span style="margin-right: 10px;">20</span> 
+                        <span style="margin-right: 10px;"> {{ $ctrl.missingHIPERs.length }} </span> 
                         <img src="/images/arrow-down.svg" class="cp" ng-show='!$ctrl.showHIPERs' ng-click='$ctrl.showHIPERs=true'>
                         <img src="/images/arrow-up.svg" class="cp" ng-show='$ctrl.showHIPERs' ng-click='$ctrl.showHIPERs=false'>
                     </div>
                 </div>
-                <common-table table-columns="$ctrl.tableColumns" data="$ctrl.missingHIPERsPaginationItems" ng-show="$ctrl.showHIPERs"></common-table>
+                <common-table table-columns="$ctrl.tableColumnsOfHIPERs" data="$ctrl.missingHIPERsPaginationItems" ng-show="$ctrl.showHIPERs"></common-table>
                 <pager total-data-num="$ctrl.missingHIPERs.length" page-size="$ctrl.pageSize" query-result="$ctrl.queryMHsResultByPagination.bind($ctrl)" ng-show="$ctrl.showHIPERs"></pager>
             </div>
             <div class="item">
                 <div class="item-outline">
                     <div class="page-title" style="font-size: 14px;"> PEs </div>
                     <div class="item-part-number" style="color:#A8216E">
-                        <span style="margin-right: 10px;">13</span> 
+                        <span style="margin-right: 10px;"> {{ $ctrl.PEs.length }} </span> 
                         <img src="/images/arrow-down.svg" class="cp" ng-show='!$ctrl.showPEs' ng-click='$ctrl.showPEs=true'>
                         <img src="/images/arrow-up.svg" class="cp" ng-show='$ctrl.showPEs' ng-click='$ctrl.showPEs=false'>
                     </div>
@@ -43,7 +43,7 @@
                 <div class="item-outline">
                     <div class="page-title" style="font-size: 14px;"> Inconsistencies </div>
                     <div class="item-part-number" style="color:#A8216E">
-                        <span style="margin-right: 10px;">10</span> 
+                        <span style="margin-right: 10px;"> {{ $ctrl.inconsistencies.length }} </span> 
                         <img src="/images/arrow-down.svg" class="cp" ng-show='!$ctrl.showInconsistencies' ng-click='$ctrl.showInconsistencies=true'>
                         <img src="/images/arrow-up.svg" class="cp" ng-show='$ctrl.showInconsistencies' ng-click='$ctrl.showInconsistencies=false'>
                     </div>
