--- a/src/app/components/report/report.html
+++ b/src/app/components/report/report.html
@@ -4,30 +4,30 @@
         <button class="button-upload" ui-sref="main.selectFiles">Create</button>
     </div>
     <div style="display: flex;" ng-repeat="row in $ctrl.reportList">
-        <div class="item" ng-repeat="report in row" ui-sref='main.reportDetail({orderId: "{{item.orderNumber}}"})'>
+        <div class="item" ng-repeat="report in row" ui-sref='main.reportDetail({reportId: {{report.reportId}} })'>
             <div>
-                <img src="/images/card-label-A10.svg" style="position: absolute;" ng-if="report.release.indexOf('a') > -1">
-                <img src="/images/card-label-B10.svg" style="position: absolute;" ng-if="report.release.indexOf('b') > -1">
-                <img src="/images/card-label-C10.svg" style="position: absolute;" ng-if="report.release.indexOf('c') > -1">
+                <img src="/images/card-label-A10.svg" style="position: absolute;" ng-if="$ctrl.checkRelease(report.content.release, 'a') > -1">
+                <img src="/images/card-label-B10.svg" style="position: absolute;" ng-if="$ctrl.checkRelease(report.content.release, 'b') > -1">
+                <img src="/images/card-label-C10.svg" style="position: absolute;" ng-if="$ctrl.checkRelease(report.content.release, 'c') > -1">
             </div>
             <div class="item-top" >
                 <div>
-                    <span style="font-size: 16px;">{{ report.name }}</span>  <br>
-                    <span style="font-size: 12px; color: #777677;"><span style="color: #4178BE">{{ report.reportStatus }}</span> - Updated: {{ report.reportPeriod | date:"MMM dd, y" }} </span>
+                    <span style="font-size: 16px;">{{ report.name || 'DSN' }}</span>  <br>
+                    <span style="font-size: 12px; color: #777677;"><span style="color: #4178BE">{{ report.reportStatus || 'New' }}</span> - Updated: {{ report.createTime | date:"MMM dd, y" }} </span>
                 </div>
-                <span style="font-family: Lubalin Book for IBM; font-size: 40px; color: #8CD211;">{{ report.score }}</span>
+                <span style="font-family: Lubalin Book for IBM; font-size: 40px; color: #8CD211;">{{ report.score || 0 }}</span>
             </div>
             <div class="item-bottom df">
                 <div class="item-bottom-part">
-                    <div class="item-part-number">{{ report.missingHipers }}</div>
+                    <div class="item-part-number">{{ report.content.hiper.length }}</div>
                     <div>Missing HIPERs</div>
                 </div>
                 <div class="item-bottom-part">
-                    <div class="item-part-number">{{ report.PEs }}</div>
+                    <div class="item-part-number">{{ report.content.peres.length }}</div>
                     <div>PEs</div>
                 </div>
                 <div class="item-bottom-part">
-                    <div class="item-part-number">{{ report.inconsistencies }}</div>
+                    <div class="item-part-number">{{ report.content.inconsistentres.length }}</div>
                     <div>Inconsistencies</div>
                 </div>
             </div>
