--- a/src/app/components/report-detail/report-detail.html
+++ b/src/app/components/report-detail/report-detail.html
@@ -1,6 +1,6 @@
 <div class="report-detail-container">
     <div class="page-title" style="position: relative; left: -80px;">
-        <img src="/images/back.png" class="cp" style="margin-right: 10px;" ui-sref="main.report"> DSN
+        <img src="/images/back.png" class="cp" style="margin-right: 10px;" ui-sref="main.report"> {{ $ctrl.reportDetail.reportName }}
     </div>
 
     <div class="" style="display: flex; flex-direction: column;">
@@ -10,10 +10,10 @@
         <div style="margin:65px 0px 45px 0px;">
             <div class="item pr">
                 <div>
-                    <span class="page-title" style="font-size: 14px;">Updated: 2017-12-01</span>   <br>
-                    <span style="font-family: HelvNeue Light for IBM; font-size: 12px; color: #1D3649;">Comment: test test</span>
+                    <span class="page-title" style="font-size: 14px;">Updated: {{ $ctrl.reportDetail.reportPeriod | date:"yyyy-MM-dd" }}</span>   <br>
+                    <span style="font-family: HelvNeue Light for IBM; font-size: 12px; color: #1D3649;">Comment: {{ $ctrl.reportDetail.comment }}</span>
                 </div>
-                <span class="report-detail-score">0</span>
+                <span class="report-detail-score">{{ $ctrl.reportDetail.score }}</span>
             </div>
             <div class="item">
                 <div class="item-outline">
