--- a/src/app/components/report/report.html
+++ b/src/app/components/report/report.html
@@ -12,10 +12,10 @@
             </div>
             <div class="item-top" >
                 <div>
-                    <span style="font-size: 16px;">{{ report.name || 'DSN' }}</span>  <br>
-                    <span style="font-size: 12px; color: #777677;"><span style="color: #4178BE">{{ report.reportStatus || 'New' }}</span> - Updated: {{ report.createTime | date:"MMM dd, y" }} </span>
+                    <span style="font-size: 16px;">{{ report.content.reportName || 'DSN' }}</span>  <br>
+                    <span style="font-size: 12px; color: #777677;"><span style="color: #4178BE">{{ report.content.status || 'good' }}</span> - Updated: {{ report.createTime | date:"MMM dd, y" }} </span>
                 </div>
-                <span style="font-family: Lubalin Book for IBM; font-size: 40px; color: #8CD211;">{{ report.score || 0 }}</span>
+                <span style="font-family: Lubalin Book for IBM; font-size: 40px; color: #8CD211;">{{ report.content.score || 0 }}</span>
             </div>
             <div class="item-bottom df">
                 <div class="item-bottom-part">
